--- a/ollama.html
+++ b/ollama.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Ollama Chat</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="icon-32x32.png">
     <!-- CSS -->
     <link href="ollama.css" rel="stylesheet" type="text/css" />
 </head>
